新增供应商搜索

--- a/web/application/admin/view/layout/header.html
+++ b/web/application/admin/view/layout/header.html
@@ -36,7 +36,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" href="#">
                     <img src="__STATIC__/img/user.jpg" class="user-image img-circle" alt="User Image" height="30px">
-                    <!--<span class="hidden-xs">Alexander Pierce</span>-->
+                    <span class="hidden-xs">{:getUserName()}</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                     <a href="{:url('admin/user/index')}" class="dropdown-item dropdown-footer">个人中心</a>
