--- a/web/application/admin/view/banner/index.html
+++ b/web/application/admin/view/banner/index.html
@@ -116,15 +116,15 @@
                         <div class="col-md-12">
                             <form role="form" class="" id="add-form">
                                 <div class="form-group">
-                                    <label >标题</label>
-                                    <input type="text" class="form-control" name="title" placeholder="banner 标题">
+                                    <label class="control-label" >标题</label>
+                                    <input type="text" class="form-control" name="title" maxlength="200" placeholder="banner 标题">
                                 </div>
                                 <div class="form-group">
-                                    <label >链接</label>
+                                    <label  class="control-label" >链接</label>
                                     <input type="url" class="form-control" name="link" placeholder="http://">
                                 </div>
                                 <div class="form-group">
-                                    <label >分组</label>
+                                    <label class="control-label" >分组</label>
                                     <select class="form-control" name="type">
                                         <option  value="1">PC端</option>
                                         <option  value="2">APP端</option>
@@ -132,21 +132,21 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <label >打开方式</label>
+                                    <label  class="control-label" >打开方式</label>
                                     <select class="form-control" name="target">
                                         <option  value="_self">新窗口打开</option>
                                         <option value="_blank">当前窗口打开</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <label >状态</label>
+                                    <label  class="control-label" >状态</label>
                                     <select class="form-control" name="target">
                                         <option  value="1">显示</option>
                                         <option value="0">隐藏</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <label >显示顺序</label>
+                                    <label class="control-label" >显示顺序</label>
                                     <input type="number" min="0" class="form-control" value="0" name="sequence" placeholder="">
                                 </div>
                                 <div class="form-group">
@@ -154,7 +154,7 @@
                                     <div class="col-sm-12">
                                         <input id="add-file" name="file" type="file" data-show-caption="true">
                                         <input  type="hidden" name="path" id="add-upload-file"  value="" />
-                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过5.0M</p>
                                     </div>
                                 </div>
                             </form>
@@ -254,5 +254,6 @@
 
 {include file="layout/footer" title="$title" keywords="开源WEB开发框架" /}
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
+<script src="__STATIC__/js/plugins/bootstrap-fileinput/js/locales/zh.js"></script>
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript" src="__STATIC__/js/admin/banner.js"></script>
