--- a/web/application/admin/view/layout/header.html
+++ b/web/application/admin/view/layout/header.html
@@ -12,12 +12,11 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="__STATIC__/css/adminlte.min.css">
-
     <link rel="stylesheet" href="__STATIC__/js/plugins/bootstrap/css/bootstrap.css">
-
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
 
     <link rel="stylesheet" href="__STATIC__/css/admin/style.css">
-
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
