企业认证后台修改

--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -45,8 +45,7 @@
                                         <option  {if $state eq $sk}selected{/if} value="{$sk}">{$sv}</option>
                                         {/foreach}
                                     </select>
-                                </div>
-
+                                </div>&nbsp;&nbsp;
                                 <div class="input-group">
                                     <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="订单号/买家/收货人" aria-label="Search">
                                     <div class="input-group-append">
