--- a/web/application/admin/view/member/index.html
+++ b/web/application/admin/view/member/index.html
@@ -13,7 +13,7 @@
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">公告管理</li>
+                        <li class="breadcrumb-item active">会员管理</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
@@ -24,7 +24,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">公告管理</h3>
+                        <h3 class="card-title">会员管理</h3>
                     </div>
                     <div class="row" style="padding-top: 15px;padding-right: 15px">
                         <div class="col-md-6">
