认证模块接口

--- a/web/application/admin/view/goods/index.html
+++ b/web/application/admin/view/goods/index.html
@@ -35,8 +35,7 @@
                                         <option  {if $supplier eq $user.id}selected{/if} value="{$user.id}">{$user.real_name}</option>
                                         {/volist}
                                     </select>
-                                </div>
-
+                                </div>&nbsp;&nbsp;
                                 <div class="input-group">
                                     <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="商品名称" aria-label="Search">
                                     <div class="input-group-append">
