--- a/web/application/admin/view/goods/view.html
+++ b/web/application/admin/view/goods/view.html
@@ -1,10 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{include file="layout/header" title="投诉与建议" keywords="开源WEB开发框架" /}
 
-</body>
-</html>
+{include file="layout/left" groupId="$groupId" keywords="开源WEB开发框架" /}
+
+<div class="content-wrapper">
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1 class="m-0 text-dark"></h1>
+                </div><!-- /.col -->
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active">商品详情</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-offset-0 col-md-12">
+                    <div class="card card-primary">
+                        <div class="card-header">
+                            <h3 class="card-title">{$goods.title}#{$goods.id}</h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">商品名称</label>
+                                <span class="">{$goods.title}</span>
+                            </div>
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3 pull-right">所属商城分类</label>
+                                <span class="">{$goods.goodsTypeName}</span>
+                            </div>
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">商品供应商</label>
+                                <span class="">{$goods.supplierName}</span>
+                            </div>
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">商品计量单位</label>
+                                <span class="">{$goods.unitName}</span>
+                            </div>
+
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">封面图片</label>
+                                <a href="{$goods.icon}" target="_blank"><img src="{$goods.icon}"  width="150px" height="150px" /></a>
+                            </div>
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">多视角图片</label>
+                                <div class="col-md-8">
+                                    <div class="row">
+                                        {foreach name="$goods.multiImg" id="imgpath"}
+                                        <div class="col-md-3 col-sm-6" style="padding-bottom: 15px;padding-left: 0px">
+                                            <a href="{$imgpath}" target="_blank"> <img src="{$imgpath}" width="200px" height="200px"  /> </a>
+                                        </div>
+                                        {/foreach}
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">成本价</label>
+                                <span class="">{$goods.cost_price}元</span>
+                            </div>
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">售价</label>
+                                <span class="">{$goods.w_price}元</span>
+                            </div>
+                            <div class="form-inline form-group">
+                                <label for="" class="col-md-3">商品详情</label>
+                                <span class="">{$goods.detail}</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+{include file="layout/footer" title="$title" keywords="" /}
