--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -2,6 +2,12 @@
 <link href="__STATIC__/js/plugins/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
 {include file="layout/left" groupId="$groupId" keywords="" /}
 
+<style type="text/css">
+    #custom-container > tr> td > input{
+        width: 130px !important;
+    }
+</style>
+
 <div class="content-wrapper">
     <div class="content-header">
         <div class="container-fluid">
@@ -28,7 +34,6 @@
                         </div>
                         <form role="form">
                             <div class="card-body">
-
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">所属商城分类</label>
                                     <span class="">
@@ -90,63 +95,8 @@
                                 </div>
 
                                 <div class="form-inline form-group" id="standard_container">
-                                    <label for="" class="col-md-2 pull-right">规格</label>
-                                    <div class="col-md-8">
-
-                                        <div class="row"><p>颜色</p></div>
-                                        <div class="row">
-                                            {foreach name=":getColorList()" id="color"}
-                                            <div class="col-md-2 col-sm-6" style="padding-bottom: 15px;padding-left: 0px">
-                                                <input type="checkbox"  data-id="{$color.id}" data-name="{$color.name}"  data-path="{$color.path}" class="color_select" value="{$color.id}"  />
-                                                <img src="{$color.path}" width="30px" height="30px"  />
-                                                &nbsp;{$color.name}
-                                            </div>
-                                            {/foreach}
-                                        </div>
 
 
-                                        <div class="row"><p>自定义规格</p></div>
-                                        <div class="row">
-                                            {foreach name=":getColorList()" id="color"}
-                                            <div class="col-md-2 col-sm-6" style="padding-bottom: 15px;padding-left: 0px">
-                                                <input type="checkbox" value="{$color.id}"  />
-                                                &nbsp;{$color.name}
-                                            </div>
-                                            {/foreach}
-                                        </div>
-
-                                        <div class="row">
-                                            <table class="table table-bordered">
-                                                <thead>
-                                                <tr>
-                                                    <th >颜色(改名后可做商品自定义选项)</th>
-                                                    <th>图片(选填)</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody id="color-container"></tbody>
-                                            </table>
-                                        </div>
-
-                                        <div class="row">
-                                            <table class="table table table-striped">
-                                                <thead>
-                                                <tr>
-                                                    <th  width="100px">颜色</th>
-                                                    <th>规格</th>
-                                                    <th>成本价</th>
-                                                    <th>实体店售价</th>
-                                                    <th>网点售价</th>
-                                                    <th>国际条形码</th>
-                                                    <th>店内编码</th>
-                                                    <th>操作</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody id="custom-container">
-                                                </tbody>
-                                            </table>
-                                        </div>
-
-                                    </div>
                                 </div>
 
                                 <div class="form-inline form-group">
@@ -199,29 +149,76 @@
 
 <script id="custom-template" type="text/html">
     <tr>
+        <td><img src="{{path}}" width="30px" height="30px"  />{{color_name}} &nbsp;</td>
+        <td>{{option_name}}</td>
+        <td><input type="number"  class="form-control" value=""  /></td>
+        <td><input type="number" class="form-control" value=""  /></td>
+        <td><input type="number" class="form-control"  value=""  /></td>
+        <td><input type="number" class="form-control" value=""  /></td>
+        <td><input type="number" class="form-control" value=""  /></td>
         <td>
-            <img src="{$color.path}" width="30px" height="30px"  />&nbsp;军绿色
-        </td>
-        <td>&nbs</td>
-        <td>
-            <input type="number"  class="form-control" value=""  />
-        </td>
-        <td>
-            <input type="number" class="form-control" value=""  />
-        </td>
-        <td>
-            <input type="number" class="form-control"  value=""  />
-        </td>
-        <td>
-            <input type="number" class="form-control" value=""  />
-        </td>
-        <td>
-            <input type="number" class="form-control" value=""  />
-        </td>
-        <td>
-
+            <i class="fa fa-user glyphicon glyphicon-trash"></i>
         </td>
     </tr>
+</script>
+
+<script id="standard-container" type="text/html">
+    <label for="" class="col-md-2 pull-right">规格</label>
+    <div class="col-md-9">
+        <div class="row"><p>颜色</p></div>
+        <div class="row">
+            {{each color_list as value}}
+            <div class="col-md-2 col-sm-6" style="padding-bottom: 15px;padding-left: 0px">
+                <input type="checkbox"  data-id="{{value.id}}" data-name="{{value.name}}"  data-path="{{value.path}}" class="color_select" value="{{value.id}}"  />
+                <img src="{{value.path}}" width="30px" height="30px"  />
+                &nbsp;{{value.name}}
+            </div>
+            {{/each}}
+        </div>
+        {{ if option}}
+        <div class="row"><p>{{option_name}}</p></div>
+        <div class="row">
+            {{each option_list as value}}
+            <div class="col-md-2 col-sm-6" style="padding-bottom: 15px;padding-left: 0px">
+                <input type="checkbox"   data-id="{{value.id}}" data-name="{{value.name}}"  class="option_select" value="{{value.id}}"  />
+                &nbsp;{{value.name}}
+            </div>
+            {{/each}}
+        </div>
+        {{/if}}
+
+        {{ if color}}
+        <div class="row">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th >颜色(改名后可做商品自定义选项)</th>
+                    <th>图片(选填)</th>
+                </tr>
+                </thead>
+                <tbody id="color-container"></tbody>
+            </table>
+        </div>
+        {{/if}}
+        <div class="row">
+            <table class="table table table-striped">
+                <thead>
+                <tr>
+                    <th  width="100px">颜色</th>
+                    <th>规格</th>
+                    <th>成本价</th>
+                    <th>实体店售价</th>
+                    <th>网点售价</th>
+                    <th>国际条形码</th>
+                    <th>店内编码</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody id="custom-container">
+                </tbody>
+            </table>
+        </div>
+    </div>
 </script>
 
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
@@ -229,6 +226,10 @@
 <script src="__STATIC__/js/plugins/ckeditor-4.8.0/ckeditor.js"></script>
 
 <script type="text/javascript">
+
+    var colorObj = [];
+    var optionObj = [];
+
     $(function () {
         //
         $('#goods_type').change(function () {
@@ -239,7 +240,16 @@
                 data:{},
                 dataType:'json',
                 success:function (data) {
-                     //alert('tttt');
+                     if(data.status == 0){
+                         if(data.data.color == 1 || data.data.diy_option == 1){
+                             var data = {color:data.data.color,color_list:data.data.color_list,option:data.data.option,option_list:data.data.option_list,option_name:data.data.option_name}; //
+                             var html = template('standard-container',data);
+                             //alert(html);
+                             $('#standard_container').html(html);
+
+
+                         }
+                     }
                 }
             });
         });
@@ -287,7 +297,7 @@
 
 
         //
-        $(".color_select").change(function () {
+        $(document).delegate('.color_select','change',function () {
             var t = $(this).prop("checked");
             var id = $(this).data('id');
             if(t == true){
@@ -315,10 +325,61 @@
             }else{
                 $('#color-container').find('tr[data-id="'+id+'"]').remove();
             }
+
+            updateContainer();
         });
 
+        $(document).delegate('.option_select','change',function () {
+            var t = $(this).prop("checked");
+            var id = $(this).data('id');
+            //
+            updateContainer();
+        });
 
         //custom-container
+        var updateContainer = function () {
+            //获取color对象
+            var color = [];
+            var option = [];
+            $(".color_select").each(function () {
+                if($(this).prop('checked') == true){
+                    var obj ={id:$(this).data('id'),name:$(this).data('name'),path:$(this).data('path')};
+                    color.push(obj);
+                }
+            });
+
+            //获取option对象
+            $(".option_select").each(function () {
+                if($(this).prop('checked') == true){
+                    var obj ={id:$(this).data('id'),name:$(this).data('name')};
+                    option.push(obj);
+                }
+            });
+
+
+            var html = '';
+            if(color.length > 0 && option.length > 0){
+                for(var i=0; i< color.length; i++){
+                    for(var j=0;j<option.length; j++){
+                        html +=template('custom-template',{color_name:color[i].name,path:color[i].path,option_id:option[j].id,option_name:option[j].name});
+                    }
+                }
+            }
+
+            if(color.length == 0 && option.length > 0){
+                for(var j=0;j<option.length; j++){
+                    html +=template('custom-template',{option_id:option[j].id,option_name:option[j].name});
+                }
+            }
+
+            if(color.length > 0 && option.length == 0){
+                for(var i=0; i< color.length; i++){
+                    html +=template('custom-template',{color_name:color[i].name,path:color[i].path});
+                }
+            }
+
+            $('#custom-container').html(html);
+        }
 
     })
 </script>
