--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -60,7 +60,7 @@
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品计量单位</label>
                                     <span class="">
-                                        <select class="form-control"  name="parent">
+                                        <select class="form-control"  name="unit">
                                         {foreach name="unitRows" id="unit"}
                                         <option value="{$unit.id}" >{$unit.name}</option>
                                         {/foreach}
@@ -71,15 +71,15 @@
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品名称</label>
                                     <span class="">
-                                        <input type="text" class="form-control" />
+                                        <input type="text"  name="title" maxlength="100" class="form-control" />
                                     </span>
                                 </div>
 
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">封面图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
-                                        <input id="multi-file" name="file" type="file"  data-show-caption="true">
-                                        <input  type="hidden" name="path" id="multi-upload-file"  value="" />
+                                        <input id="cover-file" name="file" type="file"  data-show-caption="true">
+                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
@@ -87,25 +87,34 @@
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">多视角图片</label>
                                     <div class="col-sm-4" style="padding-left: 0px">
-                                        <input id="cover-file" name="file" type="file" data-show-caption="true">
-                                        <input  type="hidden" name="path" id="cover-upload-file"  value="" />
+                                        <input id="multi-file" name="file" type="file" data-show-caption="true"  multiple>
+                                        <input  type="hidden" name="multi_path" id="multi-upload-file"  value="" />
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
 
-                                <div class="form-inline form-group" id="standard_container">
+                                <div class="form-inline form-group" id="standard_container"></div>
 
-
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">售价</label>
+                                    <span class="">
+                                        <input type="number"  min="0" name="w_price" class="form-control" />
+                                    </span>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">成本价</label>
+                                    <span class="">
+                                        <input type="number"  min="0"  name="cost_price" class="form-control" />
+                                    </span>
                                 </div>
 
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品状态</label>
-                                    <select name="" class="form-control">
+                                    <select name="state" class="form-control">
                                         <option>未上架</option>
                                         <option>正常出售</option>
                                     </select>
                                 </div>
-
 
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">商品详情</label>
@@ -128,42 +137,38 @@
 </div>
 
 {include file="layout/footer" title="$title" keywords="" /}
-
 <script id="color-template" type="text/html">
     <tr data-id="{{id}}">
         <td>
             <div class="form-inline">
                 <img src="{{path}}" width="30px" height="30px"  />&nbsp;&nbsp;
-                <input type="text" class="form-control"   value="{{name}}" />
+                <input type="text" class="form-control"  name="color[{{id}}][name]"  value="{{name}}" />
             </div>
-
         </td>
         <td>
             <input id="color-file"  class="color_file" name="file" type="file"  data-show-caption="true">
-            <input  type="hidden" name="path" id="color-upload-file"  value="" />
+            <input  type="hidden"  class="color_hide_file" name="color[{{id}}][path]"   value="" />
             <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
         </td>
     </tr>
 </script>
-
 <script id="custom-template" type="text/html">
     <tr data-color="{{color_id}}" data-option="{{option_id}}">
         <td>
-            <input type="hidden" name="standard[][color_id]"   value="{{color_id}}" />
-            <input type="hidden" name="standard[][option_id]"  value="{{option_id}}"  />
-            <input type="hidden" name="standard[][color_name]"  value="{{color_name}}"  />
+            <input type="hidden" name="standard[{{index}}][color_id]"   value="{{color_id}}" />
+            <input type="hidden" name="standard[{{index}}][option_id]"  value="{{option_id}}"  />
+            <input type="hidden" name="standard[{{index}}][color_name]"  value="{{color_name}}"  />
             {{ if path}}<img src="{{path}}" width="30px" height="30px"  />{{/if}}{{color_name}}
         </td>
         <td>{{option_name}}</td>
-        <td><input type="number"    class="form-control" value=""  name="standard[][cost_price]" /></td>
-        <td><input type="number" class="form-control" value=""  name="standard[][e_price]" /></td>
-        <td><input type="number" class="form-control"  value="" name="standard[][w_price]" /></td>
-        <td><input type="number" class="form-control" value=""  name="standard[][barcode]" /></td>
-        <td><input type="number" class="form-control" value=""  name="standard[][store_code]" /></td>
+        <td><input type="number"    class="form-control" value=""  name="standard[{{index}}][cost_price]" /></td>
+        <td><input type="number" class="form-control" value=""  name="standard[{{index}}][e_price]" /></td>
+        <td><input type="number" class="form-control"  value="" name="standard[{{index}}][w_price]" /></td>
+        <td><input type="number" class="form-control" value=""  name="standard[{{index}}][barcode]" /></td>
+        <td><input type="number" class="form-control" value=""  name="standard[{{index}}][store_code]" /></td>
         <td><i class="fa fa-trash-o" style="cursor: pointer" title="删除"></i></td>
     </tr>
 </script>
-
 <script id="standard-container" type="text/html">
     <label for="" class="col-md-2 pull-right">规格</label>
     <div class="col-md-9">
@@ -222,16 +227,11 @@
         </div>
     </div>
 </script>
-
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script type="text/javascript" src="__STATIC__/js/template-web.js"></script>
 <script src="__STATIC__/js/plugins/ckeditor-4.8.0/ckeditor.js"></script>
 
 <script type="text/javascript">
-
-    var colorObj = [];
-    var optionObj = [];
-
     $(function () {
         $('#goods_type').change(function () {
             var typeId = $('select[name="type"]').val();
@@ -245,7 +245,6 @@
                          if(data.data.color == 1 || data.data.diy_option == 1){
                              var data = {color:data.data.color,color_list:data.data.color_list,option:data.data.option,option_list:data.data.option_list,option_name:data.data.option_name}; //
                              var html = template('standard-container',data);
-                             //alert(html);
                              $('#standard_container').html(html);
 
                          }
@@ -255,7 +254,6 @@
         });
 
         $('select[name="type"]').trigger('change');
-
 
         var ckeditor = CKEDITOR.replace('goods-content');
         $("#cover-file").fileinput({
@@ -272,7 +270,7 @@
             maxFileCount: 1,
             uploadExtraData: function(previewId, index) {   //额外参数的关键点
                 var obj = {};
-                obj.type = 'banner';
+                obj.type = 'goods_thumb';
                 return obj;
             }
         });
@@ -290,11 +288,22 @@
             maxFileCount: 20,
             uploadExtraData: function(previewId, index) {   //额外参数的关键点
                 var obj = {};
-                obj.type = 'banner';
+                obj.type = 'goods';
                 return obj;
             }
         });
-
+        $('#cover-file').on("fileuploaded", function(event, data) {
+            if(data.response){
+                $('#cover-upload-file').val(data.response.data.filename);
+            }
+        });
+        $('#multi-file').on("fileuploaded", function(event, data) {
+            if(data.response) {
+                var str = $('#multi-upload-file').val();
+                var newStr = str ? str+'|'+data.response.data.filename : data.response.data.filename;
+                $('#multi-upload-file').val(newStr);
+            }
+        });
 
         //
         $(document).delegate('.color_select','change',function () {
@@ -318,21 +327,21 @@
                     maxFileCount: 20,
                     uploadExtraData: function(previewId, index) {   //额外参数的关键点
                         var obj = {};
-                        obj.type = 'banner';
+                        obj.type = 'goods_color';
                         return obj;
+                    }
+                }).on('fileuploaded',function (event,data) {
+                    if(data.response){
+                        $(event.target).closest('td').find('.color_hide_file').val(data.response.data.filename);
                     }
                 });
             }else{
                 $('#color-container').find('tr[data-id="'+id+'"]').remove();
             }
-
             updateContainer();
         });
 
         $(document).delegate('.option_select','change',function () {
-            var t = $(this).prop("checked");
-            var id = $(this).data('id');
-            //
             updateContainer();
         });
 
@@ -356,27 +365,29 @@
                 }
             });
 
-
             var html = '';
+            var index = 0;
             if(color.length > 0 && option.length > 0){
                 for(var i=0; i< color.length; i++){
                     for(var j=0;j<option.length; j++){
-                        html +=template('custom-template',{color_id:color[i].id,color_name:color[i].name,path:color[i].path,option_id:option[j].id,option_name:option[j].name});
+                        html +=template('custom-template',{index:index,color_id:color[i].id,color_name:color[i].name,path:color[i].path,option_id:option[j].id,option_name:option[j].name});
+                        index++;
                     }
                 }
             }
             if(color.length == 0 && option.length > 0){
                 for(var j=0;j<option.length; j++){
-                    html +=template('custom-template',{color_id:0,color_name:'',option_id:option[j].id,option_name:option[j].name});
+                    html +=template('custom-template',{index:index,color_id:0,color_name:'',option_id:option[j].id,option_name:option[j].name});
+                    index++;
                 }
             }
             if(color.length > 0 && option.length == 0){
                 for(var i=0; i< color.length; i++){
-                    html +=template('custom-template',{color_id:color[i].id,color_name:color[i].name,path:color[i].path,option_id:0,option_name:''});
+                    html +=template('custom-template',{index:index,color_id:color[i].id,color_name:color[i].name,path:color[i].path,option_id:0,option_name:''});
+                    index++;
                 }
             }
             $('#custom-container').html(html);
         }
-
     })
 </script>
