--- a/web/application/admin/view/goods/edit.html
+++ b/web/application/admin/view/goods/edit.html
@@ -1,10 +1,396 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{include file="layout/header" title="投诉与建议" keywords="" /}
+<link href="__STATIC__/js/plugins/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
+{include file="layout/left" groupId="$groupId" keywords="" /}
 
-</body>
-</html>
+<style type="text/css">
+    #custom-container > tr> td > input{
+        width: 130px !important;
+    }
+</style>
+
+<div class="content-wrapper">
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1 class="m-0 text-dark"></h1>
+                </div><!-- /.col -->
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active">商品列表</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card card-primary">
+                        <div class="card-header">
+                            <h3 class="card-title">修改商品</h3>
+                        </div>
+                        <form role="form" action="{:url('create')}" method="post">
+                            <div class="card-body">
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">所属商城分类</label>
+                                    <span class="">
+                                        <select  id="goods_type" class="form-control"  name="type">
+                                        {foreach name=":getTypeLevelList(3)" id="type"}
+                                        <option value="{$type.id}"   {$row.type == $type.id ? 'selected="selected"' : ''}>
+                                            {if $type.level == 2}&nbsp;&nbsp;&nbsp;&nbsp;|-&nbsp;{elseif $type.level == 3}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|-&nbsp;{/if}{$type.name}</option>
+                                        {/foreach}
+                                    </select>
+                                    </span>
+                                </div>
+
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">商品供应商</label>
+                                    <span class="">
+                                        <select class="form-control"  name="supplier">
+                                            {volist name=":getSupplierList()"  id='user'}
+                                        <option  {$row.supplier == $user.id ? 'selected="selected"' : ''} value="{$user.id}">{$user.real_name}</option>
+                                            {/volist}
+                                    </select>
+                                    </span>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">商品计量单位</label>
+                                    <span class="">
+                                        <select class="form-control"  name="unit">
+                                        {foreach name="unitRows" id="unit"}
+                                        <option  {$row.unit == $unit.id ? 'selected="selected"' : ''} value="{$unit.id}" >{$unit.name}</option>
+                                            {/foreach}
+                                    </select>
+                                    </span>
+                                </div>
+
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">商品名称</label>
+                                    <span class="">
+                                        <input type="text"  name="title" maxlength="100" class="form-control"  value="{$row.title}" />
+                                    </span>
+                                </div>
+
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">封面图片</label>
+                                    <div class="col-sm-4" style="padding-left: 0px">
+                                        <input id="cover-file" name="file" type="file"  data-show-caption="true">
+                                        <input  type="hidden" name="cover_path" id="cover-upload-file"  value="" />
+                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                    </div>
+                                </div>
+
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">多视角图片</label>
+                                    <div class="col-sm-4" style="padding-left: 0px">
+                                        <input id="multi-file" name="file" type="file" data-show-caption="true"  multiple>
+                                        <input  type="hidden" name="multi_path" id="multi-upload-file"  value="" />
+                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                    </div>
+                                </div>
+
+                                <div class="form-inline form-group" id="standard_container"></div>
+
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">售价</label>
+                                    <span class="">
+                                        <input type="number"  min="0" name="w_price"  value="{$row.w_price}" class="form-control" />
+                                    </span>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">成本价</label>
+                                    <span class="">
+                                        <input type="number"  min="0"  name="cost_price" value="{$row.cost_price}" class="form-control" />
+                                    </span>
+                                </div>
+
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">商品状态</label>
+                                    <select name="state" class="form-control">
+                                        <option value="0" {$row.state==0 ? 'selected="selected"': ''}>未上架</option>
+                                        <option value="2" {$row.state==2 ? 'selected="selected"': ''}>正常出售</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">商品详情</label>
+                                    <div  class="col-md-7" style="padding-left: 0px">
+                                        <textarea id="goods-content" class="textarea" placeholder="商品详情..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;">{$row.detail}</textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-footer col-md-offset-2">
+                                <button type="submit" class="btn btn-primary">提交</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+{include file="layout/footer" title="$title" keywords="" /}
+<script id="color-template" type="text/html">
+    <tr data-id="{{id}}">
+        <td>
+            <div class="form-inline">
+                <img src="{{path}}" width="30px" height="30px"  />&nbsp;&nbsp;
+                <input type="text" class="form-control"  name="color[{{id}}][name]"  value="{{name}}" />
+            </div>
+        </td>
+        <td>
+            <input id="color-file"  class="color_file" name="file" type="file"  data-show-caption="true">
+            <input  type="hidden"  class="color_hide_file" name="color[{{id}}][path]"   value="" />
+            <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+        </td>
+    </tr>
+</script>
+<script id="custom-template" type="text/html">
+    <tr data-color="{{color_id}}" data-option="{{option_id}}">
+        <td>
+            <input type="hidden" name="standard[{{index}}][color_id]"   value="{{color_id}}" />
+            <input type="hidden" name="standard[{{index}}][option_id]"  value="{{option_id}}"  />
+            <input type="hidden" name="standard[{{index}}][color_name]"  value="{{color_name}}"  />
+            {{ if path}}<img src="{{path}}" width="30px" height="30px"  />{{/if}}{{color_name}}
+        </td>
+        <td>{{option_name}}</td>
+        <td><input type="number"    class="form-control" value=""  name="standard[{{index}}][cost_price]" /></td>
+        <td><input type="number" class="form-control" value=""  name="standard[{{index}}][e_price]" /></td>
+        <td><input type="number" class="form-control"  value="" name="standard[{{index}}][w_price]" /></td>
+        <td><input type="number" class="form-control" value=""  name="standard[{{index}}][barcode]" /></td>
+        <td><input type="number" class="form-control" value=""  name="standard[{{index}}][store_code]" /></td>
+        <td><i class="fa fa-trash-o" style="cursor: pointer" title="删除"></i></td>
+    </tr>
+</script>
+<script id="standard-container" type="text/html">
+    <label for="" class="col-md-2 pull-right">规格</label>
+    <div class="col-md-9">
+        <div class="row"><p>颜色</p></div>
+        <div class="row">
+            {{each color_list as value}}
+            <div class="col-md-2 col-sm-6" style="padding-bottom: 15px;padding-left: 0px">
+                <input type="checkbox"  data-id="{{value.id}}" data-name="{{value.name}}"  data-path="{{value.path}}" class="color_select" value="{{value.id}}"  />
+                <img src="{{value.path}}" width="30px" height="30px"  />
+                &nbsp;{{value.name}}
+            </div>
+            {{/each}}
+        </div>
+        {{ if option}}
+        <div class="row"><p>{{option_name}}</p></div>
+        <div class="row">
+            {{each option_list as value}}
+            <div class="col-md-2 col-sm-6" style="padding-bottom: 15px;padding-left: 0px">
+                <input type="checkbox"   data-id="{{value.id}}" data-name="{{value.name}}"  class="option_select" value="{{value.id}}"  />
+                &nbsp;{{value.name}}
+            </div>
+            {{/each}}
+        </div>
+        {{/if}}
+
+        {{ if color}}
+        <div class="row">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th >颜色(改名后可做商品自定义选项)</th>
+                    <th>图片(选填)</th>
+                </tr>
+                </thead>
+                <tbody id="color-container"></tbody>
+            </table>
+        </div>
+        {{/if}}
+        <div class="row">
+            <table class="table table table-striped">
+                <thead>
+                <tr>
+                    <th  width="110px">颜色</th>
+                    <th>规格</th>
+                    <th>成本价</th>
+                    <th>实体店售价</th>
+                    <th>网点售价</th>
+                    <th>国际条形码</th>
+                    <th>店内编码</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody id="custom-container">
+                </tbody>
+            </table>
+        </div>
+    </div>
+</script>
+<script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
+<script type="text/javascript" src="__STATIC__/js/template-web.js"></script>
+<script src="__STATIC__/js/plugins/ckeditor-4.8.0/ckeditor.js"></script>
+
+<script type="text/javascript">
+    $(function () {
+        $('#goods_type').change(function () {
+            var typeId = $('select[name="type"]').val();
+            $.ajax({
+                type:'get',
+                url:'?s=admin/goods/getType&typeId='+typeId,
+                data:{},
+                dataType:'json',
+                success:function (data) {
+                    if(data.status == 0){
+                        if(data.data.color == 1 || data.data.diy_option == 1){
+                            var data = {color:data.data.color,color_list:data.data.color_list,option:data.data.option,option_list:data.data.option_list,option_name:data.data.option_name}; //
+                            var html = template('standard-container',data);
+                            $('#standard_container').html(html);
+
+                        }
+                    }
+                }
+            });
+        });
+
+        $('select[name="type"]').trigger('change');
+
+        var ckeditor = CKEDITOR.replace('goods-content');
+
+        var imgTag = "<img src='{$row.icon_path}' class='file-preview-image' alt='' title=''>";
+        $("#cover-file").fileinput({
+            language: 'zh', //设置语言
+            uploadUrl: '?s=admin/file/upload',  //上传地址
+            showUpload: true, //是否显示上传按钮
+            showRemove:true,
+            dropZoneEnabled: false,
+            showCaption: true,//是否显示标题
+            allowedPreviewTypes: ['image'],
+            allowedFileTypes: ['image'],
+            allowedFileExtensions:  ['jpg', 'png','jpeg'],
+            maxFileSize : 5120,
+            maxFileCount: 1,
+            initialPreview: [imgTag],
+            previewSettings: {
+                image: {width: "100px", height: "100px"},
+            },
+            uploadExtraData: function(previewId, index) {   //额外参数的关键点
+                var obj = {};
+                obj.type = 'goods_thumb';
+                return obj;
+            }
+        });
+        $("#multi-file").fileinput({
+            language: 'zh', //设置语言
+            uploadUrl: '?s=admin/file/upload',  //上传地址
+            showUpload: true, //是否显示上传按钮
+            showRemove:true,
+            dropZoneEnabled: false,
+            showCaption: true,//是否显示标题
+            allowedPreviewTypes: ['image'],
+            allowedFileTypes: ['image'],
+            allowedFileExtensions:  ['jpg', 'png','jpeg'],
+            maxFileSize : 5120,
+            maxFileCount: 20,
+            uploadExtraData: function(previewId, index) {   //额外参数的关键点
+                var obj = {};
+                obj.type = 'goods';
+                return obj;
+            }
+        });
+        $('#cover-file').on("fileuploaded", function(event, data) {
+            if(data.response){
+                $('#cover-upload-file').val(data.response.data.filename);
+            }
+        });
+        $('#multi-file').on("fileuploaded", function(event, data) {
+            if(data.response) {
+                var str = $('#multi-upload-file').val();
+                var newStr = str ? str+'|'+data.response.data.filename : data.response.data.filename;
+                $('#multi-upload-file').val(newStr);
+            }
+        });
+
+        //
+        $(document).delegate('.color_select','change',function () {
+            var t = $(this).prop("checked");
+            var id = $(this).data('id');
+            if(t == true){
+                var data = {id:$(this).data('id'),name:$(this).data('name'),path:$(this).data('path')};
+                var html = template('color-template', data);
+                $('#color-container').append(html);
+                $(".color_file").fileinput({
+                    language: 'zh', //设置语言
+                    uploadUrl: '?s=admin/file/upload',  //上传地址
+                    showUpload: true, //是否显示上传按钮
+                    showRemove:true,
+                    dropZoneEnabled: false,
+                    showCaption: true,//是否显示标题
+                    allowedPreviewTypes: ['image'],
+                    allowedFileTypes: ['image'],
+                    allowedFileExtensions:  ['jpg', 'png','jpeg'],
+                    maxFileSize : 5120,
+                    maxFileCount: 20,
+                    uploadExtraData: function(previewId, index) {   //额外参数的关键点
+                        var obj = {};
+                        obj.type = 'goods_color';
+                        return obj;
+                    }
+                }).on('fileuploaded',function (event,data) {
+                    if(data.response){
+                        $(event.target).closest('td').find('.color_hide_file').val(data.response.data.filename);
+                    }
+                });
+            }else{
+                $('#color-container').find('tr[data-id="'+id+'"]').remove();
+            }
+            updateContainer();
+        });
+
+        $(document).delegate('.option_select','change',function () {
+            updateContainer();
+        });
+
+        //custom-container
+        var updateContainer = function () {
+            //获取color对象
+            var color = [];
+            var option = [];
+            $(".color_select").each(function () {
+                if($(this).prop('checked') == true){
+                    var obj ={id:$(this).data('id'),name:$(this).data('name'),path:$(this).data('path')};
+                    color.push(obj);
+                }
+            });
+
+            //获取option对象
+            $(".option_select").each(function () {
+                if($(this).prop('checked') == true){
+                    var obj ={id:$(this).data('id'),name:$(this).data('name')};
+                    option.push(obj);
+                }
+            });
+
+            var html = '';
+            var index = 0;
+            if(color.length > 0 && option.length > 0){
+                for(var i=0; i< color.length; i++){
+                    for(var j=0;j<option.length; j++){
+                        html +=template('custom-template',{index:index,color_id:color[i].id,color_name:color[i].name,path:color[i].path,option_id:option[j].id,option_name:option[j].name});
+                        index++;
+                    }
+                }
+            }
+            if(color.length == 0 && option.length > 0){
+                for(var j=0;j<option.length; j++){
+                    html +=template('custom-template',{index:index,color_id:0,color_name:'',option_id:option[j].id,option_name:option[j].name});
+                    index++;
+                }
+            }
+            if(color.length > 0 && option.length == 0){
+                for(var i=0; i< color.length; i++){
+                    html +=template('custom-template',{index:index,color_id:color[i].id,color_name:color[i].name,path:color[i].path,option_id:0,option_name:''});
+                    index++;
+                }
+            }
+            $('#custom-container').html(html);
+        }
+    })
+</script>
