添加订单返回字段

--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -240,8 +240,8 @@
     KindEditor.ready(function(K) {
         var editor1 = K.create('#goods-content', {
             cssPath : '__STATIC__/js/plugins/kindeditor/plugins/code/prettify.css',
-            uploadJson : '/kindeditordemo/php/upload_json.php',
-           // uploadJson : '/?s=admin/file/upload2',
+           // uploadJson : '/kindeditordemo/php/upload_json.php',
+            uploadJson : '/?s=admin/file/upload2',
             fileManagerJson : '/kindeditordemo/php/file_manager_json.php',
             allowFileManager : true,
             afterCreate : function() {
