--- a/web/application/admin/view/certification/view.html
+++ b/web/application/admin/view/certification/view.html
@@ -122,3 +122,7 @@
 </div>
 
 {include file="layout/footer" title="$title" keywords="" /}
+<script type="text/javascript">
+    var url = '{:url("admin/certification/index")}';
+    $('a[href="'+url+'"]').addClass('active');
+</script>
