--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -174,7 +174,7 @@
 
                 {if $groupId ==3 }
                 <li class="nav-item has-treeview">
-                    <a href="/index.php?jzdc=form.data_show_list&table_id=37" class="nav-link">
+                    <a href="{:url('admin/certification/index')}" class="nav-link">
                         <i class="nav-icon fa fa-users"></i>
                         <p>企业认证</p>
                     </a>
