--- a/web/application/admin/view/suggestion/index.html
+++ b/web/application/admin/view/suggestion/index.html
@@ -81,3 +81,7 @@
 </div>
 
 {include file="layout/footer" title="$title" keywords="开源WEB开发框架" /}
+<script type="text/javascript">
+    var url = '{:url("admin/suggestion/index")}';
+    $('a[href="'+url+'"]').addClass('active');
+</script>
