--- a/web/application/admin/view/goods/view.html
+++ b/web/application/admin/view/goods/view.html
@@ -82,3 +82,8 @@
 </div>
 
 {include file="layout/footer" title="$title" keywords="" /}
+<script type="text/javascript">
+    var url = '{:url("admin/goods/index")}';
+    $('a[href="'+url+'"]').addClass('active');
+    $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
+</script>
