--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -57,7 +57,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/index.php?jzdc=mall.m_goods_admin" class="nav-link">
+                            <a href="{:url('admin/goods/index')}" class="nav-link">
                                 <i class="fa fa-image nav-icon"></i>
                                 <p>全站商品</p>
                             </a>
