--- a/web/application/admin/view/type_option/index.html
+++ b/web/application/admin/view/type_option/index.html
@@ -209,6 +209,9 @@
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript">
+    var url = '{:url("admin/type/index")}';
+    $('a[href="'+url+'"]').addClass('active');
+    $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
     $(function () {
         $("select[name=\"specifications_source\"]").change(function () {
             var value = $(this).val();
