修改昂坪分类

--- a/web/application/admin/view/goods/edit.html
+++ b/web/application/admin/view/goods/edit.html
@@ -32,7 +32,7 @@
                         <div class="card-header">
                             <h3 class="card-title">修改商品</h3>
                         </div>
-                        <form role="form" action="{:url('create')}" method="post">
+                        <form role="form" id="edit-form" action="{:url('create')}" method="post">
                             <div class="card-body">
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">所属商城分类</label>
