--- a/web/application/admin/view/type/edit.html
+++ b/web/application/admin/view/type/edit.html
@@ -32,36 +32,37 @@
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
-                        <form role="form" action="" method="post">
+                        <form role="form" id="edit-form" action="" method="post" onsubmit="return validateSubmit();">
                             <div class="card-body">
-                                <div class="form-group">
-                                    <label for="">分类名称</label>
+                                <div class="form-inline form-group">
+                                    <label for="" class="col-md-2 pull-right">分类名称</label>
                                     <input type="text" class="form-control" name="name" value="{$row.name}" maxlength="50" placeholder="">
                                 </div>
-                                <div class="form-group">
-                                    <label>上级分类</label>
-                                    <select class="form-control"  name="parent">
-                                        <option {if $row.parent == 0}selected{/if} value="0">请选择</option>
-                                        {foreach name=":getTypeLevelList(2)" id="type"}
-                                        <option value="{$type.id}"  {if $type.id == $row.parent}selected{/if}>{if $type.level == 2}&nbsp;&nbsp;&nbsp;&nbsp;|-&nbsp;{/if}{$type.name}</option>
-                                        {/foreach}
-                                    </select>
-                                    <p class="help-block">如果不选择上级分类，默认为顶级分类</p>
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">上级分类</label>
+                                    <div class="">
+                                        <select class="form-control"  name="parent">
+                                            <option {if $row.parent == 0}selected{/if} value="0">请选择</option>
+                                            {foreach name=":getTypeLevelList(2)" id="type"}
+                                            <option value="{$type.id}"  {if $type.id == $row.parent}selected{/if}>{if $type.level == 2}&nbsp;&nbsp;&nbsp;&nbsp;|-&nbsp;{/if}{$type.name}</option>
+                                            {/foreach}
+                                        </select>
+                                        <p class="help-block">如果不选择上级分类，默认为顶级分类</p>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class="control-label">图标:</label>
-                                    <div class="col-sm-12">
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">图标:</label>
+                                    <div class="">
                                         <input id="edit-file" name="file" type="file" data-show-caption="true">
                                         <input  type="hidden" name="path" id="edit-upload-file"  value="{$row.path}" />
                                         <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label>排序</label>
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">排序</label>
                                     <input type="number" name="sequence" min="0" class="form-control" value="{$row.sequence}" placeholder="排序">
                                 </div>
                             </div>
-                            <!-- /.card-body -->
 
                             <div class="card-footer">
                                 <button type="submit" class="btn btn-primary">保存</button>
@@ -124,4 +125,40 @@
             $('#edit-upload-file').val(data.response.data.filename);
         }
     });
+
+    $("#edit-form").bootstrapValidator({
+        excluded:[":disabled"],
+        live: 'disabled',
+        message: 'This value is not valid',
+        fields: {
+            name: {
+                message: 'The name is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '商品分类名称不能为空'
+                    },
+                    stringLength: {
+                        min: 2,
+                        max: 50,
+                        message: '最大长度为50个字符'
+                    },
+                }
+            },
+            path:{
+                message: 'The path is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '请选择图标'
+                    },
+                }
+            },
+        }
+    });
+
+    function validateSubmit() {
+        if ($("#edit-form").data('bootstrapValidator').isValid()) {
+            return true;
+        }
+        return false;
+    }
 </script>
