--- a/web/application/admin/view/type/index.html
+++ b/web/application/admin/view/type/index.html
@@ -39,9 +39,7 @@
 
                         </div>
                         <div class="col-md-6">
-                            <a class="btn btn-default pull-right" href="{:url('admin/type/create')}">
-                                <i class="fa fa-plus"></i> 添加分类
-                            </a>
+                            <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/type/create')}" >新增</a>
                         </div>
                     </div>
                     <!-- /.card-header -->
@@ -109,8 +107,7 @@
     $('a[href="'+url+'"]').addClass('active');
     $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
     //折叠展示
-    function displayData(_self)
-    {
+    function displayData(_self) {
         if(_self.title == "关闭")
         {
             jqshow($(_self).parent().parent().attr('id'), 'hide');
