修改后台会员模块

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -101,7 +101,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="/index.php?jzdc=index.admin_users" class="nav-link">
+                            <a href="{:url('admin/member/index')}" class="nav-link">
                                 <i class="fa fa-group nav-icon"></i>
                                 <p>管理会员</p>
                             </a>
