--- a/web/application/admin/view/member/index.html
+++ b/web/application/admin/view/member/index.html
@@ -1,7 +1,6 @@
-{include file="layout/header" title="$title" keywords="开源WEB开发框架" /}
-<link rel="stylesheet" href="__STATIC__/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+{include file="layout/header" title="$title" keywords="" /}
 <link rel="stylesheet" href="__STATIC__/js/plugins/bootstrapvalidator/css/bootstrapValidator.css"/>
-{include file="layout/left" groupId="$groupId" keywords="开源WEB开发框架" /}
+{include file="layout/left" groupId="$groupId" keywords="" /}
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <div class="content-header">
@@ -46,7 +45,7 @@
                         <table id="example2" class="table table-bordered table-hover">
                             <thead>
                             <tr>
-                                <th><input type="checkbox" /> </th>
+                                <!--<th><input type="checkbox" /> </th>-->
                                 <th>图像</th>
                                 <th>用户名</th>
                                 <th>用户组</th>
@@ -58,14 +57,14 @@
                             <tbody>
                             {volist name='list' id='member'}
                             <tr>
-                                <td><input type="checkbox" /> </td>
-                                <td><img src=""/></td>
+                                <!--<td><input type="checkbox" /> </td>-->
+                                <td><img src="{$member.icon}"  width="100px" height="100px"/></td>
                                 <td>{$member.username}<br />{$member.phone}<br/>{$member.real_name}<br />{$member.email}</td>
                                 <td>{:getMemberGroup($member.group)}</td>
                                 <td>{:date('Y-m-d H:i',$member.reg_time)}</td>
                                 <td>{$member.state == 1 ? '正常' : '被锁'}</td>
                                 <td>
-                                    <a href="javascript:void(0)"  class="btn btn-sm btn-primary"  data-id="{$member.id}" data-toggle="modal"   data-target="#edit-modal">编辑</a>
+                                    <a href="javascript:void(0)"  class="btn btn-sm btn-primary"  data-id="{$member.id}" data-username="{$member.username}" data-nickname="{$member.nickname}" data-toggle="modal"   data-target="#edit-modal">编辑</a>
                                 </td>
                             </tr>
                             {/volist}
@@ -85,10 +84,10 @@
 
 
 <div class="modal fade" id="create-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content modal-lg">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">新增公告</h5>
+                <h5 class="modal-title" id="exampleModalLabel">新增会员</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -98,26 +97,36 @@
                     <div class="row">
                         <!-- left column -->
                         <div class="col-md-12">
-                            <!-- form start -->
-                            <form role="form" class="" id="add-form">
-                                <div class="form-group">
-                                    <label for="">标题</label>
-                                    <input type="text" class="form-control"  name="title" placeholder="公告标题">
+                            <form role="form" class="" id="add-form"  method="post">
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">用户名</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control col-md-12" maxlength="30"  name="username" placeholder="用户名">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">摘要</label>
-                                    <textarea class="form-control" rows="3" placeholder="摘要..."  name="summary"></textarea>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">手机</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control col-md-12" maxlength="11"  name="phone" placeholder="手机">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">正文</label>
-                                    <textarea class="textarea" placeholder="公告内容..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">真实姓名</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control col-md-12"  maxlength="30" name="real_name" placeholder="真实姓名或企业名称">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label >状态</label>
-                                    <select class="form-control">
-                                        <option value="1">显示</option>
-                                        <option value="0">屏蔽</option>
-                                    </select>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">邮箱(选填)</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control col-md-12"  name="email" placeholder="">
+                                    </div>
+                                </div>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">密码</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control col-md-12"  maxlength="10" name="password" placeholder="" value="">
+                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -133,10 +142,10 @@
 </div>
 
 <div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">新增公告</h5>
+                <h5 class="modal-title">编辑会员</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -147,25 +156,33 @@
                         <!-- left column -->
                         <div class="col-md-12">
                             <!-- form start -->
-                            <form role="form" class="" id="edit-form">
-                                <div class="form-group">
-                                    <label for="">标题</label>
-                                    <input type="text" class="form-control"  name="title" placeholder="公告标题">
+                            <form role="form"  class="" id="edit-form">
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">用户名</label>
+                                    <div class="col-md-9">
+                                        <p class="show_name"></p>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">摘要</label>
-                                    <textarea class="form-control" rows="3" placeholder="摘要..."  name="summary"></textarea>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">昵称</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control col-md-12" maxlength="30" value=""  name="nickname" placeholder="昵称">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">正文</label>
-                                    <textarea  id="edit-content" class="textarea2" placeholder="公告内容..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">密码</label>
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control col-md-12"  maxlength="10" name="password" placeholder="" value="">
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label >状态</label>
-                                    <select class="form-control" name="status">
-                                        <option value="1">显示</option>
-                                        <option value="0">屏蔽</option>
-                                    </select>
+                                <div class="form-group form-inline">
+                                    <label for="" class="col-md-3">状态</label>
+                                    <div class="col-md-9">
+                                        <select name="state" class="form-control">
+                                            <option value="1">正常</option>
+                                            <option value="0">锁定</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -180,17 +197,166 @@
     </div>
 </div>
 
-<div class="modal fade" id="info-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-body ">
-            </div>
-        </div>
-    </div>
-</div>
 
-
-{include file="layout/footer" title="$title" keywords="开源WEB开发框架" /}
-<script src="__STATIC__/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+{include file="layout/footer" title="$title" keywords="" /}
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
-<script type="text/javascript" src="__STATIC__/js/admin/notice.js"></script>
+<script type="text/javascript">
+    var url = '{:url("admin/member/index")}';
+    $('a[href="'+url+'"]').addClass('active');
+    $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
+    $(function () {
+        $("#add-form").bootstrapValidator({
+            excluded:[":disabled"],
+            live: 'disabled',
+            message: 'This value is not valid',
+            fields: {
+                username: {
+                    message: 'The name is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '用户名不能为空'
+                        },
+                        stringLength: {
+                            min: 2,
+                            max: 30,
+                            message: '最大长度为30个字符'
+                        },
+                        // regexp: {
+                        //     regexp: /^[a-zA-Z0-9_\.]+$/,
+                        //     message: '只能是数字和字母_.'
+                        // }
+                    }
+                },
+                phone: {
+                    message: 'The phone is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '手机号不能为空'
+                        },
+                        stringLength: {
+                            min: 11,
+                            max: 11,
+                            message: '请输入11位手机号码'
+                        },
+                        regexp: {
+                            regexp: /^1[3|4|5|7|8]{1}[0-9]{9}$/,
+                            message: '请输入正确的手机号码'
+                        }
+                    }
+                },
+                real_name: {
+                    message: 'The real_name is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '真实姓名不能为空'
+                        },
+                        stringLength: {
+                            min: 2,
+                            max: 30,
+                            message: '最大长度为30个字符'
+                        },
+                    }
+                },
+                email: {
+                    message: 'The email is not valid',
+                    validators: {
+                        emailAddress: {
+                            message: '请输入正确的邮件地址如：123@qq.com'
+                        }
+                    }
+                },
+                password:{
+                    message: 'The real_name is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '密码不能为空'
+                        },
+                    }
+                }
+            }
+        });
+
+        $("#add-request").click(function () {
+            $("#add-form").data('bootstrapValidator').validate();
+            if ($("#add-form").data('bootstrapValidator').isValid()) {
+                $.ajax({
+                    type:'post',
+                    url:'/?s=admin/member/create',
+                    data:$('#add-form').serialize(),
+                    success:function (data) {
+                        if(data.status == 0){
+                            window.location.reload();
+                        }else{
+                            alert(data.msg);
+                        }
+                    }
+                });
+            }
+            return false;
+        });
+
+        $('#edit-modal').on('show.bs.modal', function (event) {
+            var id = $(event.relatedTarget).data('id');
+            var nickname = $(event.relatedTarget).data('nickname');
+            var username = $(event.relatedTarget).data('username');
+            $("#edit-request").data('id',id);
+            $("#edit-form").find('input[name="nickname"]').val(nickname);
+            $("#edit-form").find('.show_name').html(username);
+        });
+
+        $("#edit-form").bootstrapValidator({
+            excluded:[":disabled"],
+            live: 'disabled',
+            message: 'This value is not valid',
+            fields: {
+                nickname: {
+                    message: 'The name is not valid',
+                    validators: {
+                        notEmpty: {
+                            message: '昵称不能为空'
+                        },
+                        stringLength: {
+                            min: 2,
+                            max: 30,
+                            message: '最大长度为30个字符'
+                        },
+                        // regexp: {
+                        //     regexp: /^[a-zA-Z0-9_\.]+$/,
+                        //     message: '只能是数字和字母_.'
+                        // }
+                    }
+                },
+            }
+        });
+
+
+        $("#edit-request").click(function () {
+            //验证数据
+         //   $('#edit-form').bootstrapValidator('validate');
+            $("#edit-form").data('bootstrapValidator').validate();
+            var id = $(this).data('id');
+            //获取数据
+            //数据提交
+            if ($("#edit-form").data('bootstrapValidator').isValid()) {
+                $.ajax({
+                    type: 'post',
+                    url: '/?s=admin/member/edit&id=' + id,
+                    data: $('#edit-form').serialize(),
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.status == 0) {
+                            window.location.reload();
+                        } else {
+                            alert(data.msg);
+                        }
+                    }
+                });
+            }
+        });
+
+    })
+
+
+
+
+</script>
